--- a/src/frontend/Sidebar.css
+++ b/src/frontend/Sidebar.css
@@ -1,4 +1,5 @@
-.sidebar {
+.sidebar
+{
   position: fixed;
   top: 50px;
   left: 0;
@@ -11,11 +12,13 @@
   flex-direction: column;
 }
 
-.sidebar.open {
+.sidebar.open
+{
   width: 200px;
 }
 
-.sidebar-content {
+.sidebar-content
+{
   color: white;
   padding: 20px;
   display: flex;
@@ -24,7 +27,8 @@
   height: 100%;
 }
 
-.toggle-button {
+.toggle-button
+{
   position: absolute;
   right: -25px;
   transform: translateY(-50%);
@@ -38,10 +42,12 @@
   transition: background-color 0.3s ease;
 }
 
-.toggle-button:hover {
+.toggle-button:hover
+{
   background-color: #888;
 }
 
-.toggle-button:focus {
+.toggle-button:focus
+{
   outline: none;
 }
