--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,15 @@
 * {
   user-select: none;
 }
+/*
+New CSS properties used in this file:
+  /* src/index.css */
+/* body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 /* Base styles */
 body {
